Actually fixed the scrollspy offset issue; value should be 'number', not 'string' type

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body data-spy="scroll" data-target="#navigation" data-offset="50">
+<body data-spy="scroll" data-target="#navigation">
   <header>
     <nav id="navigation" class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
       <a href="https://github.com/jlvmoster" class="navbar-brand" target="_blank">jlvmoster</a>
