Minor changes/fixes

--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
   </header>
 
   <section id="HOME">
-    <div class="jumbotron text-center">
-      <div class="container">
-        <h1 class="display-2">Hi, I'm Jalo</h1>
-        <p class="lead">and this is my website</p>
-      </div>
+    <div id="jumbotron-home" class="jumbotron text-center">
+      <h1 class="display-2">Hi, I'm Jalo</h1>
+      <p class="lead">and this is my website</p>
     </div>
   </section>
 
